# ProjectKonami

./: .gitignore  CMakeLists.txt  Procfile  README.md  db_conf.json  heroku.yml  herokuDockerfile  main.cpp
.circleci/: config.yml
include/: Auth.hpp  ChatApplication.hpp  DialogueService.hpp  InterruptableSleep.hpp  Scheduler.hpp  Session.hpp  SessionManager.hpp  ThreadPool.hpp
project/: Auth.cpp  Auth.hpp  CMakeLists.txt  ChatApplication.hpp  ChatServer.cpp  ChatServer.hpp  Client.hpp  ClientService.hpp  DbData.hpp  DbSession.hpp  DialogueDbHandler.hpp  DialogueManager.hpp  DialogueService.hpp  DialogueWidget.hpp  EditProfileForm.cpp  FifoCache.hpp  ImageProcessing.hpp  MessageDbHandler.hpp  MessageWidget.cpp  MessageWidget.hpp  PasswordStrengthValidator.hpp  Randomizer.cpp  Randomizer.hpp  Scheduler.hpp  SessionManager.cpp  UserDbHandler.hpp  UserService.cpp  chatapp.css  db_conf.json  main.cpp  moodels.hpp  photoManager.hpp  simplechat.xml  wt_config.xml
project/blur/: CMakeLists.txt  blur.hpp
project/cache/: 2QCache.hpp  test_cache.cpp
project/include/: Auth.hpp  AuthWidget.hpp  BaseCache.hpp  ChatApplication.hpp  ChatEvent.hpp  ChatServer.hpp  ChatWidget.hpp  Client.hpp  ClientService.hpp  DbSession.hpp  DialogueManager.hpp  DialogueService.hpp  DialogueWidget.hpp  EditProfileForm.hpp  ImageProcessing.hpp  LRUCache.hpp  MessageManager.hpp  MessageWidget.hpp  Models.hpp  RegistrationForm.hpp  Server.hpp  Session.hpp  SessionManager.hpp  ThreadPool.hpp  UserManager.hpp  UserService.hpp  UserWidget.hpp  cache.hpp
project/src/: Auth.cpp  AuthWidget.cpp  ChatApplication.cpp  ChatServer.cpp  ChatWidget.cpp  Client.cpp  ClientService.cpp  DbSession.cpp  DialogueManager.cpp  DialogueManager.hpp  DialogueService.cpp  DialogueWidget.cpp  EditProfileForm.cpp  ImageProcessing.cpp  MessageManager.cpp  MessageWidget.cpp  PasswordStrengthValidator.cpp  Randomizer.cpp  RegistrationForm.cpp  Scheduler.cpp  Server.cpp  SessionManager.cpp  UserManager.cpp  UserService.cpp  UserWidget.cpp  blur.cpp  cache.cpp  main.cpp  test.cpp
src/: Auth.cpp  ChatApplication.cpp  DialogueService.cpp  InterruptableSleep.cpp  Scheduler.cpp  Session.cpp  SessionManager.cpp  ThreadPool.cpp
utests/: CMakeLists.txt  CacheTest.cpp  TestClient.cpp  TestDb.cpp  auth_tests.cpp  main.cpp  run_unittests.sh  scheduler_tests.cpp  session_manager_tests.cpp  test.cpp  test_cache.cpp  tests  thread_pool_tests.cpp
utests/include/: DataTypesStub.hpp  DbConnectorStub.hpp  FakeDbConnector.hpp
utests/src/: CSTest.cpp  CacheTest.cpp  ClientStub.cpp  DSTest.cpp  DbConnectorStub.cpp  FakeDbConnector.cpp  TestClient.cpp  TestClientService.cpp  TestDb.cpp  TestServer.cpp  USTest.cpp  session_manager_tests.cpp  test.cpp
